[gd_scene load_steps=16 format=3 uid="uid://c2akku8du1xku"]

[ext_resource type="PackedScene" uid="uid://0adle82x7bu3" path="res://Scenes/Actors/Audax/Audax.tscn" id="1_6apj6"]
[ext_resource type="Script" path="res://Scenes/Levels/Level_1/Satus.gd" id="1_t6rts"]
[ext_resource type="PackedScene" uid="uid://c5m6ohe5umt0s" path="res://Maps/Temple/Temple.tscn" id="2_h2leq"]
[ext_resource type="PackedScene" uid="uid://b8cki0dpiti4u" path="res://Maps/Temple/Landscape.tscn" id="3_thq57"]
[ext_resource type="PackedScene" uid="uid://bekgrr5o18y83" path="res://Maps/Temple/Plants.tscn" id="4_f4paw"]
[ext_resource type="PackedScene" uid="uid://b5hw6xbx7eqw4" path="res://Scenes/Elements/Flame/Flame.tscn" id="6_hkr5x"]
[ext_resource type="PackedScene" uid="uid://bp4qfj0wq1jf3" path="res://Assets/3D Models/TreatedAssets/Ship.tscn" id="7_yllq7"]
[ext_resource type="PackedScene" uid="uid://ullu4fvwt3ef" path="res://Assets/3D Models/TreatedAssets/Boulder.tscn" id="8_sswv1"]
[ext_resource type="PackedScene" uid="uid://bnuhen58egjhl" path="res://Assets/3D Models/TreatedAssets/LightShroom.tscn" id="9_sck1f"]

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_cg7qn"]
rayleigh_color = Color(0.8, 0.321569, 0.996078, 1)
ground_color = Color(0.294118, 0.196078, 0.0980392, 1)

[sub_resource type="Sky" id="Sky_khvr2"]
sky_material = SubResource("PhysicalSkyMaterial_cg7qn")

[sub_resource type="Environment" id="Environment_rdui3"]
background_mode = 2
sky = SubResource("Sky_khvr2")
tonemap_mode = 2
tonemap_exposure = 0.7
tonemap_white = 1.04
sdfgi_enabled = true
sdfgi_use_occlusion = true
volumetric_fog_enabled = true
volumetric_fog_albedo = Color(1, 0.411765, 0.192157, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_u4yd3"]
size = Vector3(20.4478, 1.9917, 5.28541)

[sub_resource type="BoxShape3D" id="BoxShape3D_q32hj"]
size = Vector3(19.481, 3.56006, 13.7049)

[sub_resource type="BoxShape3D" id="BoxShape3D_sgr3d"]
size = Vector3(4.53992, 3.74023, 5.98599)

[node name="Satus" type="Node3D" node_paths=PackedStringArray("player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.22072, -4.76837e-07, 0.0928936)
script = ExtResource("1_t6rts")
player = NodePath("Audax")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_rdui3")

[node name="Audax" parent="." instance=ExtResource("1_6apj6")]
transform = Transform3D(0.999917, 0, 0.0128626, 0, 1, 0, -0.0128626, 0, 0.999917, 1.44549, 1.71474, 6.79319)

[node name="Landscape" parent="." instance=ExtResource("3_thq57")]

[node name="Boulder" parent="Landscape" instance=ExtResource("8_sswv1")]
transform = Transform3D(0.807002, 0.590549, 0, -0.590549, 0.807002, 0, 0, 0, 1, -3.62377, 3.579, -2.77005)

[node name="Plants" parent="." instance=ExtResource("4_f4paw")]

[node name="Temple" parent="." instance=ExtResource("2_h2leq")]
transform = Transform3D(0.687759, 0, 0.725939, 0, 1, 0, -0.725939, 0, 0.687759, 7.69689, 0.580248, 9.52268)

[node name="Cameras" type="Node3D" parent="."]

[node name="Camera1" type="Camera3D" parent="Cameras"]
transform = Transform3D(0.358698, 0.658761, -0.661339, 0.0232638, 0.701957, 0.711839, 0.933164, -0.27072, 0.236465, -8.08664, 8.02647, 6.81715)

[node name="Camera1Trigger" type="Area3D" parent="Cameras/Camera1"]
transform = Transform3D(0.358698, 0.0232638, 0.933164, 0.658761, 0.701957, -0.27072, -0.661339, 0.711839, 0.236465, 9.90712, 0.368791, -9.25201)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cameras/Camera1/Camera1Trigger"]
transform = Transform3D(0.999999, 0.000603018, -0.000861049, -0.000601882, 0.999999, 0.00131906, 0.000861844, -0.00131854, 0.999999, -1.58252, -0.496811, -2.2859)
shape = SubResource("BoxShape3D_u4yd3")

[node name="Camera2" type="Camera3D" parent="Cameras"]
transform = Transform3D(-0.552934, 0.664389, -0.502844, 0.0682369, 0.637571, 0.767364, 0.830426, 0.389989, -0.39787, -4.07431, 7.01167, -2.81687)

[node name="Camera2Trigger" type="Area3D" parent="Cameras/Camera2"]
transform = Transform3D(-0.882767, 0.0232638, -0.469233, -0.319776, 0.701957, 0.636395, 0.344187, 0.711839, -0.612225, -2.6377, -1.22512, -7.36395)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cameras/Camera2/Camera2Trigger"]
transform = Transform3D(1, -1.05772e-07, -1.19599e-08, 1.04354e-07, 0.951845, 0.306576, -2.10718e-08, -0.306575, 0.951846, -4.91859, 0.84732, 1.66569)
shape = SubResource("BoxShape3D_q32hj")

[node name="Camera3" type="Camera3D" parent="Cameras"]
transform = Transform3D(-0.735387, 0.447009, -0.509302, -0.000345964, 0.751326, 0.659931, 0.677647, 0.485481, -0.552361, 11.2539, 6.2063, 9.61528)

[node name="Camera3Trigger" type="Area3D" parent="Cameras/Camera3"]
transform = Transform3D(-0.987586, -0.0427396, -0.151148, -0.131429, 0.751796, 0.646164, 0.0860162, 0.658008, -0.74808, -0.0911245, 0.323933, -6.88277)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cameras/Camera3/Camera3Trigger"]
transform = Transform3D(0.998811, -0.000447208, -0.0487531, 0.000348089, 0.999998, -0.00204156, 0.0487539, 0.00202216, 0.998809, -0.00575447, -0.182887, -2.30308)
shape = SubResource("BoxShape3D_sgr3d")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 9.49206e-15, 2.61532e-08, 0.299157, 0.954204, 8.34191e-08, 0.954204, -0.299157, 0, 66.8725, -11.6694)
light_color = Color(0.811765, 0.631373, 0.964706, 1)
light_energy = 5.0
shadow_enabled = true
shadow_opacity = 0.45
shadow_blur = 2.0

[node name="Fire" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.30502, 0)

[node name="Flame" parent="Fire" instance=ExtResource("6_hkr5x")]
transform = Transform3D(4.1269, 0.564578, 0, -2.82289, 0.82538, 0, 0, 0, 5, -0.932872, 0.442357, -1.41028)

[node name="Flame2" parent="Fire" instance=ExtResource("6_hkr5x")]
transform = Transform3D(0.557658, 0.0762901, 4.95414, -2.82289, 0.82538, 0, -4.08905, -0.5594, 0.675638, -0.437577, 0.88176, 0.813433)

[node name="Flame3" parent="Fire" instance=ExtResource("6_hkr5x")]
transform = Transform3D(-0.827217, -0.113167, -4.89852, -2.82289, 0.82538, 0, 4.04314, 0.55312, -1.00223, 0.200915, 0.88176, -0.150844)

[node name="Flame4" parent="Fire" instance=ExtResource("6_hkr5x")]
transform = Transform3D(4.1269, 0.564578, 0, -2.82289, 0.82538, 0, 0, 0, 5, -0.932872, 0.442357, -0.612626)

[node name="Flame5" parent="Fire" instance=ExtResource("6_hkr5x")]
transform = Transform3D(0.557658, 0.0762901, 4.95414, -2.82289, 0.82538, 0, -4.08905, -0.5594, 0.675638, -1.0985, 0.88176, -0.0112182)

[node name="Flame6" parent="Fire" instance=ExtResource("6_hkr5x")]
transform = Transform3D(-0.827217, -0.113167, -4.89852, -2.82289, 0.82538, 0, 4.04314, 0.55312, -1.00223, 0.200915, 0.88176, -1.81786)

[node name="Rocket" parent="." instance=ExtResource("7_yllq7")]
transform = Transform3D(-0.458988, -0.395029, -0.79579, -0.212921, 0.91852, -0.333145, 0.862551, 0.0165308, -0.5057, -0.379885, 1.20617, -0.488088)

[node name="PathMarkers" type="Node3D" parent="."]

[node name="LightShroom" parent="PathMarkers" instance=ExtResource("9_sck1f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.77928, 0.26719, 9.90711)

[node name="LightShroom2" parent="PathMarkers" instance=ExtResource("9_sck1f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.4207, 0.48349, 14.0523)

[connection signal="body_entered" from="Cameras/Camera1/Camera1Trigger" to="." method="_on_camera_1_trigger_body_entered"]
[connection signal="body_entered" from="Cameras/Camera2/Camera2Trigger" to="." method="_on_camera_2_trigger_body_entered"]
[connection signal="body_entered" from="Cameras/Camera3/Camera3Trigger" to="." method="_on_camera_3_trigger_body_entered"]
